# detect-and-reason

./: .gitignore  1_main_acc_detailed_all_data.xlsx  detection_bestf1_results.xlsx  main.py  pyproject.toml
config/dataset/: big.yaml  custom_tomato.yaml  little.yaml  merge.yaml  merge_big.yaml  merge_little.yaml  merge_tomatod.yaml  rob2pheno.yaml  tomatod.yaml
config/experiments/: cross_evaluation_3cls.yaml
config/model/: dino_1cls.yaml  dino_2cls.yaml  dino_3cls.yaml  rf_detr_1cls.yaml  rf_detr_2cls.yaml  rf_detr_3cls.yaml  rt_detr_1cls.yaml  rt_detr_2cls.yaml  rt_detr_3cls.yaml  yolo11_1cls.yaml  yolo11_2cls.yaml  yolo11_3cls.yaml  yolo12_1cls.yaml  yolo12_2cls.yaml  yolo12_3cls.yaml  yolo_world_1cls.yaml  yolo_world_2cls.yaml  yolo_world_3cls.yaml
config/visualization/: detection_overlay.yaml
notebook/: image_adjust.ipynb  model_process.ipynb  qwen3_vl_decoder_sft.ipynb  rt_detr.ipynb  vlm_pipeline.ipynb
scripts/: benchmark.sh  build_paper_tables.py  evaluate_bestf1.py  evaluate_coco_predictions.py  evaluate_yolo_predictions.py  pred_eval_overlay_1cls.sh  pred_eval_overlay_1cls_merge.sh  pred_eval_overlay_2cls.sh  pred_eval_overlay_3cls.sh  pred_eval_overlay_3cls_merge.sh  pred_eval_overlay_zs.sh  predict_yolo_labels.py  prepare_custom_tomato.py  prepare_dataset.py  prepare_rob2pheno.py  render_coco_overlays.py  render_yolo_overlays.py  train_1cls.sh  train_3cls_2cls.sh  train_model.py  vlm_classification_pipeline.py  vlm_rf_detr_1cls.sh  vlm_rf_detr_1cls_merge.sh
src/: [result] table_excel_templete.xlsx  aggregate_benchmark.py  config_loader.py
(+57 files in other folders)
