[project]
name = "detect-and-reason"
version = "0.1.0"
description = "Tomato detection (3cls end-to-end vs 1cls+VLM DaR) comparison study"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  # Core packages
  "transformers>=4.57.3,<5",
  "pillow>=12.0.0",
  "matplotlib>=3.10.8",
  "ipykernel>=6.30.1",
  "jupyterlab>=4.4.7",
  "ultralytics==8.3.243",
  "pytorch-lightning==2.4.0",
  "scikit-learn==1.5.2",
  "seaborn==0.13.2",
  "pycocotools>=2.0.11",
  "timm>=1.0.24",
  "einops>=0.8.2",
  "pyyaml>=6.0",
  "tqdm>=4.66.0",
  "opencv-python>=4.8.0",
  "supervision>=0.29.1",
  "autorootcwd>=1.0.1",
]

[dependency-groups]
vlm = [
  "torch==2.7.1",
  "torchvision==0.22.1",
  "qwen-vl-utils>=0.0.14",
  "accelerate>=1.0.0",
  "datasets>=3.0.0",
  "outlines>=0.1.0",
  "supervision>=0.25.0",
  "bitsandbytes>=0.49.1",
]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
